@@ -1,7 +1,5 @@
 package com.programmers.heycake.domain.image.mapper;
 
-import static java.util.stream.Collectors.*;
-
 import java.util.List;
 
 import com.programmers.heycake.domain.image.model.dto.ImageResponse;
@@ -15,10 +13,10 @@ import lombok.NoArgsConstructor;
 public class ImageMapper {
 
 	public static ImageResponses toResponse(List<Image> images) {
-		List<ImageResponse> imageUrls = images
+		List<ImageResponse> imageResponses = images
 				.stream()
 				.map(image -> new ImageResponse(image.getImageUrl(), image.getFilename()))
-				.collect(toList());
-		return new ImageResponses(imageUrls);
+				.toList();
+		return new ImageResponses(imageResponses);
 	}
 }
